[fix bug 1417105] Extra white space at the bottom of the /firefox/new/?scene=2

--- a/media/css/firefox/new/quantum/scene1.scss
+++ b/media/css/firefox/new/quantum/scene1.scss
@@ -248,6 +248,10 @@ html[dir="rtl"].show-refresh {
 /* -------------------------------------------------------------------------- */
 // Newsletter
 
+.newsletter-container {
+    background: #fff;
+}
+
 #newsletter-subscribe {
     display: none;
 
